--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">Pocket TherAPPist</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">pocket</string>
+    <string name="suds_heading">Select your current anxiety level:</string>
+    <string name="suds_submit">Submit</string>
 
 </resources>
