--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,18 @@
     <string name="suds_heading">Select your current anxiety level:</string>
     <string name="suds_default">0</string>
     <string name="suds_submit">Submit</string>
+    <string name="new_activity">Name of new situation:</string>
+    <string name="starting_suds_level">How anxious do you think you would be in this situation:</string>
+    <string name="new_activity_submit">Submit</string>
+    <string name="new_activity_cancel">Cancel</string>
+    <string name="activity_button_1">Being introduced to a friend of a friend</string>
+    <string name="activity_button_2">Complaining (in a café / shop)</string>
+    <string name="activity_button_3">Asking for help in shop and not buying item</string>
+    <string name="activity_button_4">Phoning someone you don’t know</string>
+    <string name="activity_button_5">Being at home with mum</string>
+    <string name="add_new_activity_button">Add New Activity</string>
+    <string name="encouragement_message_text">You\'re doing great. Stay in the situation and you will feel better.</string>
+    <string name="continue_button">Continue</string>
+    <string name="end_session_button">End Session</string>
 
 </resources>
